cleanup
git-svn-id: https://svn.apache.org/repos/asf/ant/ivy/core/trunk@1056065 13f79535-47bb-0310-9956-ffa450edef68